Classifier-backend/manifest/RabbitMq.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq-service
  labels:
    app: rabbitmq-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq-service
  template:
    metadata:
      labels:
        app: rabbitmq-service
    spec:
      containers:
        - name: rabbitmq-service
          image: rabbitmq:3-management
          ports:
            - containerPort: 5672
            - containerPort: 15672
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-service
spec:
  selector:
    app: rabbitmq-service
  ports:
    - name: messaging
      protocol: TCP
      port: 5672
      targetPort: 5672
    - name: management
      protocol: TCP
      port: 15672
      targetPort: 15672
