Classifier-backend/manifest/RabbitMq.Ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rabbitmq-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: '1g'
spec:
  rules:
    - http:
        paths:
          - path: /rabbitmq/management
            pathType: Prefix
            backend:
              service:
                name: rabbitmq-service
                port:
                  number: 15672
          - path: /rabbitmq/service
            pathType: Prefix
            backend:
              service:
                name: rabbitmq-service
                port:
                  number: 5672
